# fastapi-blog

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  constants.py  database.py  filters.py  main.py  models.py  query.py  recreate_tables.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: 22ecd0d87a2c_add_post_model.py  37f319d24599_add_postcomment_model.py  51940e2375f4_add_timestampmixin_create_at_and_.py  7330c360c5cd_add_post_post_comment_fk_index_and_.py  97178a15417e_create_user_table.py
app/api/: dependency.py  deps.py  main.py
app/api/routes/: auth.py  post.py  post_comment.py  user.py
app/core/: config.py  database.py  logging_config.py  redis_client.py  security.py
app/crud/: __init__.py  auth.py  comment.py  post.py  user.py
app/models/: __init__.py  base.py  models.py
app/schemas/: __init__.py  auth.py  comment.py  common.py  post.py  user.py
app/templates/system_mail/: base.html  verification_code.html  welcome.html
app/utils/: swagger.py
scripts/: recreate_tables.py  recreate_tables.sh
tests/: conftest.py  test_auth.py  test_post.py  test_post_comment.py  test_query.py  test_user.py  utils.py
