[project]
name = "fasapi-blog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.4",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    "ruff>=0.14.9",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]



# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4

exclude = [
    ".git",
    ".venv", # uv가 생성한 가상환경
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "alembic/versions", # Alembic이 자동 생성한 마이그레이션
]
[tool.ruff.lint]
select = [
    "FAST", # fast api
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort (import 정렬)
    "B", # flake8-bugbear (잠재적 버그 방지)
    "C4", # flake8-comprehensions (리스트 컴프리헨션 최적화)
    "UP", # pyupgrade (최신 파이썬 문법으로 자동 변환)
    "N", # pep8-naming (네이밍 컨벤션)
    "SIM", # flake8-simplify (코드 단순화)
    "TC", # flake8-type-checking 타입 힌팅을 위해 임포트한 모듈이 런타임에 실행되지 않도록 if TYPE_CHECKING: 블록 안으로 넣도록 유도
]


