[project]
name = "fasapi-blog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.124.4",
    "jinja2>=3.1.6",
    "nanoid>=2.0.0",
    "psycopg[binary,pool]>=3.3.2",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
    "fastapi-mail>=1.6.1",
    "anyio>=4.12.0",
]


[dependency-groups]
dev = [
    { include-group = "test" },
    "jupyterlab>=4.5.1",
    "ipykernel>=7.1.0",
    "ruff>=0.14.9",
]

test = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-env>=1.2.0",
]


# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4

exclude = [
    ".git",
    ".venv", # uv가 생성한 가상환경
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "app/alembic/versions", # Alembic이 자동 생성한 마이그레이션
    "*.ipynb" # pycharm ruff 이상으로 임시 인하여 비활성화
]


[tool.ruff.lint]
select = [
    "FAST", # fast api
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort (import 정렬)
    "B", # flake8-bugbear (잠재적 버그 방지)
    "C4", # flake8-comprehensions (리스트 컴프리헨션 최적화)
    "UP", # pyupgrade (최신 파이썬 문법으로 자동 변환)
    "N", # pep8-naming (네이밍 컨벤션)
    "SIM", # flake8-simplify (코드 단순화)
    "TC", # flake8-type-checking 타입 힌팅을 위해 임포트한 모듈이 런타임에 실행되지 않도록 if TYPE_CHECKING: 블록 안으로 넣도록 유도
]

[tool.pytest.ini_options]
anyio_mode = "auto"

env = [
    "ON_TEST=true",
]